--- a/consultation.html
+++ b/consultation.html
@@ -347,7 +347,7 @@
                     <a href="marble.html">marble</a>
                   </li>
                   <li>
-                    <a href="anti-etch.html">More Anti E tch</a>
+                    <a href="anti-etch.html">Anti Etch</a>
                   </li>
                 </ul>
               </div>
@@ -413,7 +413,7 @@
             All Rights Reserved
           </p>
           <p>
-            © Copyright 2021
+            © Copyright 2025
           </p>
         </div>
 
