--- a/we-provide.html
+++ b/we-provide.html
@@ -258,7 +258,7 @@
                     <a href="marble.html">marble</a>
                   </li>
                   <li>
-                    <a href="anti-etch.html">More Anti E tch</a>
+                    <a href="anti-etch.html">Anti Etch</a>
                   </li>
                 </ul>
               </div>
@@ -323,7 +323,7 @@
             All Rights Reserved
           </p>
           <p>
-            © Copyright 2021
+            © Copyright 2025
           </p>
         </div>
 
