--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@
 
             <div class="swiper-wrapper">
               <div class="swiper-slide">
+                <img src="img/new/img1.jpg" alt="marble">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/new/img1.jpg" alt="marble">
+              </div>
+              <div class="swiper-slide">
+                <img src="img/new/img1.jpg" alt="marble">
+              </div>
+              <!-- <div class="swiper-slide">
                 <img src="img/welcomescreen__slide1.jpg" alt="marble">
               </div>
               <div class="swiper-slide">
@@ -170,16 +179,7 @@
               </div>
               <div class="swiper-slide">
                 <img src="img/welcomescreen__slide1.jpg" alt="marble">
-              </div>
-              <div class="swiper-slide">
-                <img src="img/welcomescreen__slide1.jpg" alt="marble">
-              </div>
-              <div class="swiper-slide">
-                <img src="img/welcomescreen__slide1.jpg" alt="marble">
-              </div>
-              <div class="swiper-slide">
-                <img src="img/welcomescreen__slide1.jpg" alt="marble">
-              </div>
+              </div> -->
             </div>
 
             <div class="welcomescreen__slider-next">
