--- a/marble.html
+++ b/marble.html
@@ -171,7 +171,7 @@
             </div>
           </div>
           <div class="marbleinfo__bottom" data-aos="fade-up" data-aos-delay="100">
-            <img src="img/marbleinfo_bg.jpg" alt="marble">
+            <img src="img/new/img2.jpg" alt="marble">
           </div>
         </div>
       </section>
