--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
       <section class="toppage">
         <div class="container">
           <div class="toppage__img" data-aos="flip-up" data-aos-duration="1200">
-            <img src="img/toppage_bg.jpg" alt="Contact Us">
+            <img src="img/new/img5.jpg" alt="Contact Us">
             <div class="toppage__title section-title">
               <h2 style="color:#212121;">
                 Contact
