--- a/we-provide.html
+++ b/we-provide.html
@@ -128,7 +128,7 @@
       <section class="toppage">
         <div class="container">
           <div class="toppage__img" data-aos="flip-up" data-aos-duration="1200">
-            <img src="img/weprovide_toppage_bg.jpg" alt="Marble">
+            <img src="img/new/img3.jpg" alt="Marble">
             <div class="toppage__title section-title">
               <h1>
                 We provide
